--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body, html {
 }
 
 body {
- background: url(./images/bg01.jpg);
+ background: url(./images/istockphoto-1257005098-170667a.jpg);
  background-size: cover;
 }
 
